--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 
 <h3>LICENSE</h3>
 
-<p><strong>MIT License</strong></p>
-<a href="https://github.com/hiraq/Cloggy/blob/master/LICENSE.txt">License</a>
+<p><a href="https://github.com/hiraq/Cloggy/blob/master/LICENSE.txt"><strong>MIT License</strong></a></p>
 
       </section>
       <footer>
