--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <h3>Main Purpose</h3>
 
-<p>The main purpose of this plugin is to cut time development by providing and sharing many modules to reuse again and also structured database schema to manage general content. You can choose Cloggy as your administration area without using Cloggy database (using your own) to manage your own content, or otherwise you can using Cloggy database without using adminstrator features, it's flexible!</p>
+<p>The main purpose of this plugin is to cut time development by providing and sharing many modules to reuse again and also structured database schema to manage general content. </p>
 
 <h3>Limitations</h3>
 
