--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <h3>LICENSE</h3>
 
-<p><a href="https://github.com/hiraq/Cloggy/blob/master/LICENSE.txt"><strong>MIT License</strong></a></p>
+<p><a href="https://github.com/hiraq/Cloggy/blob/master/LICENSE.txt"><strong>BSD 3-Clause License</strong></a></p>
 
       </section>
       <footer>
