--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section>
         <h3>About Cloggy.</h3>
 
-<p>Cloggy is a plugin for CakePHP for website administration. With Cloggy,all administration activities will be separated by modules. In addition to administration, Cloggy also provides a MySql database structure to facilitate developer / programmer to manage their content following the concept of node in Drupal. </p>
+<p>Cloggy is a plugin for CakePHP for website administration. With Cloggy,all administration activities will be separated by modules. In addition to administration, Cloggy also provides a MySql database structure to facilitate developer / programmer to manage their contents. </p>
 
 <h3>Main Purpose</h3>
 
